--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/a6.jpg" class="img-res" alt="">
+                            <img src="assets/img/a7.PNG" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Statistical Research</h4>
                                 
@@ -303,8 +303,8 @@
                         <h4>Years Experience</h4>
                     </div>-->
                     <!--<div class="col-sm-4 col-xs-12">-->
-                        <p id="infinity" class="counter" data-from="0" data-to="1" data-speed="1000"> 0</p>
-                        <h4>Seconds on this site!</h4>    
+                        <p id="infinity" class="counter" data-from="0" data-to="1" data-speed="1000" style="color: white;"> 0</p>
+                        <h4 style="color: white;">Seconds on this site!</h4>    
                    <!--</div>-->
                     <!--<div class="col-sm-4 col-xs-12">
                         <p id="infinity" class="counter" data-from="0" data-to="1" data-speed="1000">0</p>
@@ -314,7 +314,9 @@
             </div>
         </section><!-- /.section-counters -->
 
-        <section id="contact" class="site-section section-form text-center">
+    
+
+       <section id="contact" class="site-section section-form text-center">
             <div class="container">
 
                 <h3>Contact</h3>
@@ -331,32 +333,38 @@
                             <textarea name="message" id="mesaage" class="form-control" placeholder="Message" required></textarea>
                         </div>
                     </div>
-                    <button href="#" class="btn btn-border" type="submit">Hire Me <span class="glyphicon glyphicon-send"></span></button>
+                    <button href="#" class="btn btn-border" type="submit">Send<span class="glyphicon glyphicon-send"></span></button>
                 </form>
-            </div>
-        </section><!-- /.section-form -->
-
-    </main><!-- /#main -->
-
-    <footer id="colophon" class="site-footer">
-        <div class="container">
-            <div class="row">
                 <div class="col-sm-4 col-xs-12">
                     <a class="icon facebook-bg" href="#"><i class="icon-facebook"></i></a>
                     <a class="icon twitter-bg" href="#"><i class="icon-twitter"></i></a>
                     <a class="icon gplus-bg" href="#"><i class="icon-linkedin"></i></a>
                     <a class="icon linkedin-bg" href="#"><i class="icon-gplus"></i></a>
                 </div>
-                <div class="col-sm-4 col-sm-offset-0 col-xs-6 col-xs-offset-3"><p class="copyright">2017. All Rights Reserved</p></div>
+            </div>
+        </section><!-- /.section-form -->
+
+  <!-- /#main -->
+
+    <!--<footer id="colophon" class="site-footer">-->
+      <!--  <div class="container">
+            <div class="row">
+                <div class="col-sm-4 col-xs-12">
+                    <a class="icon facebook-bg" href="#"><i class="icon-facebook"></i></a>
+                    <a class="icon twitter-bg" href="#"><i class="icon-twitter"></i></a>
+                    <a class="icon gplus-bg" href="#"><i class="icon-linkedin"></i></a>
+                    <a class="icon linkedin-bg" href="#"><i class="icon-gplus"></i></a>
+                </div>-->
+              <!-- <div class="col-sm-4 col-sm-offset-0 col-xs-6 col-xs-offset-3"><p class="copyright">2017. All Rights Reserved</p></div>
                 <div class="col-sm-4 col-xs-3">
                     <div class="text-right page-scroll">
                         <a class="icon icon-up-bg" href="#hero"><i class="icon-up"></i></a>
                     </div>
-                </div>
+                </div>-->
             </div>
         </div>
-    </footer><!-- /#footer -->
-
+   <!-- </footer>--><!-- /#footer -->
+</main>
     <!-- Modals -->
     <div id="portfolioItem1" class="modal fade" role="dialog">
       <div class="modal-dialog">
