--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Favicon
     ================================================== -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/m2.jpg">
 
     <!-- Stylesheets
     ================================================== -->
@@ -84,14 +84,14 @@
                     <h1>Malshani Hettiarachchi</h1>
                     <div class="page-scroll">
                         <p class="job-title">undergraduate</p>
-                        <a href="#contact" class="btn btn-fill ">Hire me</a>
+                        <!--<a href="#contact" class="btn btn-fill ">Hire me</a>-->
                         <div class="clearfix visible-xxs"></div>
-                        <a href="#portfolio" class="btn btn-border">Explore more</a>
+                       <!-- <a href="#portfolio" class="btn btn-border">Explore more</a>-->
                     </div>
                 </div>
             
                 <div class="col-md-6 text-right">
-                    <img src="assets/img/dp3.jpg" alt="dp3">
+                    <img src="assets/img/dp.jpg" alt="dp3">
                 </div>
 
             </div>
@@ -107,7 +107,7 @@
                         <h2>About</h2>
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
                         <p>Hello! I'm Malshani Hettiarachchi. I'm Self-motivated, Creative, Adaptive undergraduate seeking to work in an environment which encourages me to succeed and grow as an IT professional where I can utilize my skills and knowledge accordingly.</p>
-                        <a href="http://www.grad.illinois.edu/sites/default/files/pdfs/cvsamples.pdf" class="btn btn-fill" target="_blank" download>Download my cv</a>
+                        <a href="https://drive.google.com/file/d/1HCoQiYOuwgud2itChycpmFFd5lIACvuv/view?usp=sharing" class="btn btn-fill" target="_blank" download>Download my cv</a>
                     </div>
                 </div>
             </div>
